# HW_Geometry

./: .gitignore  CMakeLists.txt  LICENSE
include/: GLProgram.h  MyNurbs.h
src/: GLProgram.cpp  MyNurbs.cpp  Shader.cpp  main.cpp
