cmake_minimum_required (VERSION 3.16)
project ("project")

file(GLOB SRCS "./src/*.cpp" "./src/*.c" "./imgui/*.cpp" "./imgui/backends/*.cpp")
add_executable(project ${SRCS} "include/MyNurbs.h" "src/MyNurbs.cpp")
target_include_directories(project PRIVATE "./include" "./imgui" "./imgui/backends")
if(LINUX)
    target_link_libraries(project dl GL glfw)
else()
    target_link_directories(project PRIVATE "./lib")
    target_link_libraries(project glfw3)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(MSVC)
    add_compile_options(/utf-8)
    add_compile_options(/W3)
endif()
